dvbmanager: higherVoltage exists only for DVB-S

Don't try to read/write higherVoltage for non-DVB-S devices.

BUG: 388367

Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>